[build-system]
requires = [
    "setuptools>=64",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "isage-memory-benchmark"
version = "0.1.0.1"
description = "Memory system benchmarking placeholder for the SAGE ecosystem"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "IntelliStream Team", email = "shuhao_zhang@hust.edu.cn" },
]
keywords = [
    "sage",
    "benchmark",
    "memory",
    "evaluation",
    "intellistream",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "isage-common",
    "isage-kernel",
    "isage-libs",
]

license = "MIT"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff==0.14.6",
    "pre-commit>=3.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/intellistream/sage-memory-benchmark"
Documentation = "https://github.com/intellistream/sage-memory-benchmark#readme"
Repository = "https://github.com/intellistream/sage-memory-benchmark"
Issues = "https://github.com/intellistream/sage-memory-benchmark/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["sage*"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "sage.benchmark_memory._version.__version__"}

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = [
    "E501",
    "F401",
    "F403",
    "F405",
    "F841",
    "E712",
    "E402",
    "E741",
    "E722",
    "W293",
]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "src",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
addopts = [
    "-ra",
    "--verbose",
]
